# Main_Project_3

./: README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: README.md  pyproject.toml
homeworks/HW03/eda-cli/src/eda_cli/: cli.py  core.py  viz.py
homeworks/HW03/eda-cli/src/tests/: test_core.py
