[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eda-cli"
version = "0.3.0"
description = "Консольная утилита для разведочного анализа данных (EDA)"
readme = "README.md"
authors = [
    { name = "Student", email = "student@example.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
]

[project.scripts]
eda-cli = "eda_cli.cli:cli"

[project.urls]
"Homepage" = "https://github.com/yourusername/eda-cli"
"Bug Tracker" = "https://github.com/yourusername/eda-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/eda_cli"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true